# some_rust_stuff

./: README.md
eludris_bot/: Cargo.toml
eludris_bot/src/: main.rs  utils.rs
reqeststuff/: Cargo.toml
rustyoutube/: Cargo.toml
rustyoutube/src/: main.rs
stuff/: Cargo.toml
stuff/src/: main.rs
