[package]
name = "eludris_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uwuki = { git = "https://github.com/enokiun/uwuki", version = "0.1.0" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
futures = "0.3.24"
log = "0.4.17"
