[package]
name = "reqeststuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.12", features = ["stream","multipart","json"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"